Add request frequency limit for auth
